# EntraLint

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  action.yml  ai_fix.patch  bp1_error.txt  demo.html  pyproject.toml  tmp_body.json
.github/workflows/: ci.yml  entralint-example.yml
docs/: authoring-checks.md
scripts/: create_test_agents.ps1  seed_demo_findings.ps1
src/entralint/: __init__.py  __main__.py
src/entralint/auth/: provider.py
src/entralint/cli/: app.py  output.py
src/entralint/cli/commands/: cache.py  config.py  login.py  permissions.py  report.py  scan.py
src/entralint/core/: baseline.py  check.py  config.py  context.py  engine.py  errors.py  models.py
src/entralint/frameworks/: __init__.py
src/entralint/graph/: cache.py  client.py
src/entralint/multi_tenant/: __init__.py
src/entralint/reports/: html_report.py  json_report.py  sarif_report.py
src/entralint/validation/: __init__.py
src/entralint/web/: __init__.py
tests/unit/auth/: test_provider.py
tests/unit/checks/: test_agent_identity.py  test_agent_identity_extended.py  test_agent_shared_creds_standing_privilege.py  test_app_credential_expiry.py  test_app_high_privilege_permissions.py  test_app_multi_tenant.py  test_app_no_owner.py  test_app_secrets_certs.py  test_auth_passwordless.py  test_auth_weak_mfa_methods.py  test_batch6.py  test_batch7.py  test_batch8.py  test_batch9.py  test_ca_mfa_admins.py  test_ca_mfa_azure_mgmt.py  test_ca_mfa_required.py  test_ca_named_locations.py  test_ca_persistent_browser.py  test_ca_risky_signins.py  test_ca_risky_users.py  test_org_cross_tenant.py  test_org_guest_invite.py  test_org_security_defaults.py  test_org_sspr.py  test_org_user_consent.py  test_role_break_glass.py  test_role_excessive_global_admins.py  test_role_permanent_assignments.py  test_sp_disabled_with_creds.py  test_sp_excessive_delegated.py  test_sp_high_privilege_granted.py  test_sp_secrets_certs.py  test_sp_third_party_app_perms.py  test_user_disabled_accounts.py  test_user_guests.py  test_user_stale_accounts.py
tests/unit/cli/: test_fail_on.py  test_summary.py
tests/unit/core/: test_baseline.py  test_check.py  test_config.py  test_engine.py  test_models.py
tests/unit/graph/: test_client.py
tests/unit/reports/: test_html_report.py  test_json_report.py  test_sarif_report.py
(+180 files in other folders)
