[project]
name = "entralint"
version = "0.1.0"
description = "Lint your Entra ID. Fix before they breach."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [{ name = "EntraLint Contributors" }]
keywords = ["entra", "azure", "security", "linter", "identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "httpx>=0.27,<1",
    "msal>=1.28,<2",
    "azure-identity>=1.17,<2",
    "pyyaml>=6,<7",
    "jinja2>=3,<4",
    # Pin transitive cryptography to a patched version (GHSA-p423-j2cm-9vmq).
    "cryptography>=46.0.7",
]

[project.urls]
Homepage = "https://github.com/entralint/entralint"
Documentation = "https://github.com/entralint/entralint/tree/main/docs"
Repository = "https://github.com/entralint/entralint"
Issues = "https://github.com/entralint/entralint/issues"

[project.scripts]
entralint = "entralint.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entralint"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.0,<2",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "types-pyyaml>=6,<7",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["entralint"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
